salesforce/force-app/main/default/objects/Sales_Detail__c/Sales_Detail__c.object-meta.xml
<CustomObject>
    <description>Sales pricing by packaging format and quantity</description>
    <label>Sales Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>