salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <referenceTo>Formula__c</referenceTo>
    <relationshipLabel>Sales Details</relationshipLabel>
    <relationshipName>Sales_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>