salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Is_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Overridden__c</fullName><defaultValue>false</defaultValue><label>Is Overridden</label><trackHistory>false</trackHistory><type>Checkbox</type>
</CustomField>