salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percentage__c</fullName><label>Margin (%)</label><precision>10</precision><required>false</required><scale>4</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>