salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Overridden_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Overridden_Sales_Price__c</fullName><label>Overridden Sales Price</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>