salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Packaging_Format__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Format__c</fullName><label>Packaging Format</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>