salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName><label>Quantity</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>