salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>BULK</fullName><default>true</default><label>Bulk</label></value>
            <value><fullName>BOX</fullName><default>false</default><label>Box</label></value>
            <value><fullName>BULKBAGS</fullName><default>false</default><label>Bulk Bags</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>