salesforce/force-app/main/default/objects/Sales_Detail__c/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName><label>Unit Size</label><precision>18</precision><required>false</required><scale>4</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>